--- a/EmployeeDepartment.api/appsettings.json
+++ b/EmployeeDepartment.api/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=EMTECH-LAP-1061\\SQLEXPRESS;Database=EDMSDatabase;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
